changed style class expanded height to 100% to avoid cutoff

--- a/src/sass/main.sass
+++ b/src/sass/main.sass
@@ -176,7 +176,7 @@ input[type=submit]
  
 
 .expanded
-  max-height: 500px;
+  max-height: 100%;
   transition: max-height 0.1s ease-in;
   transition-delay: 0.15s;
   margin-top: 2rem;
